# CMOR_438_Fall_2025_Emilia

./: .gitignore  LICENSE  README.md  example.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: tests.yml
examples/: README.md
examples/supervised_learning_examples/: README.md
examples/supervised_learning_examples.ipynb/decisiontrees/: README.md  decision_tree_example.ipynb  regression_tree_example.ipynb
examples/supervised_learning_examples.ipynb/knn/: README.md  knn_classification_example.ipynb  knn_regression_example.ipynb
examples/supervised_learning_examples.ipynb/randomforest/: random_forest_classification_example.ipynb
examples/supervised_learning_examples.ipynb/regression/: README.md  logistic_regression_example.ipynb
examples/supervised_learning_examples/decision_regression_trees/: README.md  decision_tree_example.ipynb  regression_tree_example.ipynb
examples/supervised_learning_examples/decisiontrees/: README.md  regression_tree_example.ipynb
examples/supervised_learning_examples/knn/: README.md  knn_classification_example.ipynb  knn_regression_example.ipynb
examples/supervised_learning_examples/linear_regression/: README.md  linear_regression_example.ipynb
examples/supervised_learning_examples/logistic_regression/: README.md  (+1 more)
examples/unsupervised_learning_examples/: README.md
src/: README.md
src/rice_ml/: __init__.py
src/rice_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_basic_functions.py
tests/unit/: test_postprocess.py
(+79 files in other folders)
